observability/00-namespace.yaml
# 작성자: 최유준
# 작성 날짜: 2026-08-28
#
# 네임스페이스명 monitoring 사용
# ("In-Cluster ... CP3·Worker2, monitoring/argocd/jenkins Namespace")
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: seokpan
    app.kubernetes.io/managed-by: argocd
